src/test/deca/syntax/valid/testNull.deca
// test Null
// result : OK

class A{
    int x;
}

{
    A a = null;
}
