src/test/deca/syntax/invalid/testFloatSyntax.deca
// test Hexadecimal format for floats
// Result : Error
{
    float a = 0x12;
}
